--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -37,6 +37,16 @@ default.create.label=Create {0}
 default.show.label=Show {0}
 default.edit.label=Edit {0}
 
+action= Action
+create = Create
+reload = Reload
+Welcome.to.Home.Page = Welcome To Home Page!
+cancel = Cancel
+member= Member
+address = Address
+name = Name
+version = Version
+id = ID
 default.button.create.label=Create
 default.button.edit.label=Edit
 default.button.update.label=Update
